[package]
name = "libriza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
thirtyfour = { version = "0.31.0", optional = true }
thiserror = "1.0.37"
tokio = { version = "1.21", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }

[features]
browser = ["dep:thirtyfour"]
